# WildCard_BackEnd

./: .env.example  .gitignore  Cargo.toml  README.md  big_two.json  blackjack.json  init.sql  nine_nine.json  nohup.out  run.sh  test.json  test2.json  war.json
.github/workflows/: ci.yaml  release.yaml  test.yml
.sqlx/: query-1c1f72b9d05ded24e579810735579141a070f134ae3aa0ab43b9dcc428a61416.json  query-3735e966e4af21eb72b313eec5e2c19641225c416366b26c5f6a0ccb424f70b6.json  query-3d43b93773e3c2c63525dc962be2beef3ee5117453a2a893ce2b12a36c118f93.json  query-48ff9e8c8d10532b956be161c7059d01cf9682fdb0cd30caca5eb883a3de2727.json  query-66737c7807ecea790a732a49709b5ac4e14a0fe3e224cfd4722d09a764d9287d.json  query-6fddfc3e242c3ccc78578c4706f77c79728cfe6fb19d43dfdb437bde3d466df0.json  query-6ff738ceb537a25977cee3d30ae0ab692acc1a3c561ff89634b38ab303a1294f.json  query-87bbac72cb663b846c3f29f25c58ab8a4af672bc6a19857b3d4ab71315c906cb.json  query-8f54ad3bf57c864cb17d45fe8c801a6846590acc2e23088388e168a64aa91e1e.json  query-9255e49b81e8186ef272e9b077158c941bc566db918ff49dbdf70c9fb42b279d.json  query-b7b1d1a8b815fdaa3cf722d95de045d68c5b2abc2ab090f89bfb94712fb31cb7.json  query-bab60d0042390b23cbfe0b7df2115dfabb380d4bc1d4501b5d0787bb3db52001.json  query-d8d481157638baa6cac50c80e76dccdd996b0c32dabe152c3ec250395ae1f233.json  query-e5c2ffca8fbd64309de4781940945eb32bab453f3f393430a1a866215ab5c4b4.json  query-eb73886aaca4212046c3d632d7fdbe3bb3c31169b80742e35e12662e1fabd91c.json
crates/wildcard-backend/: Cargo.toml
crates/wildcard-backend-macros/: Cargo.toml
crates/wildcard-backend-macros/src/: lib.rs
crates/wildcard-backend/src/: error.rs  lib.rs  main.rs  state.rs
crates/wildcard-backend/src/domain/: email.rs  game.rs  mod.rs  room.rs  rule.rs  rule_engine.rs  user.rs
crates/wildcard-backend/src/infrastructure/: email.rs  mod.rs  (+3 more)
doc/: alpha阶段前后端对接设计.md  api.md  api清单.md  rule-json格式说明.md  后端规则引擎要求.md  对局通信.md  开发架构.md  测试覆盖率.md  组件.md  规则引擎构建说明.md  运行说明.md
doc/issues/: user-system-align.md
doc/prs/: user-system-align.md
src/: error.rs  lib.rs  main.rs  state.rs
src/domain/: game.rs  mod.rs  replay.rs  report.rs  room.rs  rule.rs  rule_engine.rs  user.rs
src/infrastructure/: email.rs  room.rs  user.rs
src/interface/: auth.rs  game.rs  market.rs  mod.rs  replay.rs  report.rs  room.rs  rule.rs  user.rs
test-fixtures/: rule_sample.json  user_sample.json
tests/: api_tests.rs  fake_store_example.rs  fixture_contract_tests.rs  framework_smoke.rs  infrastructure_coverage_tests.rs  interface_behavior_tests.rs  market_interface_coverage_tests.rs  preset_rule_contract_tests.rs  replay_contract_tests.rs  report_interface_coverage_tests.rs  room_contract_tests.rs  room_game_pressure_tests.rs  room_interface_coverage_tests.rs  rule_engine_public_flow_tests.rs  rule_engine_tests.rs  rule_interface_coverage_tests.rs  test_app_behavior_tests.rs  user_login_avatar_http_tests.rs  websocket_session_behavior_tests.rs  websocket_tests.rs
tests/api/: auth_flow_test.rs  find_user_test.rs  login_test.rs  logout_test.rs  mod.rs  room_test.rs  rule_payload_boundary_test.rs  rule_test.rs  user_auth_test.rs  user_test.rs
tests/common/: mod.rs
tests/mock/: test_data.rs
tests/websocket/: mod.rs  multi_client_test.rs  session_boundary_test.rs
(+4 files in other folders)
