[package]
name = "wildcard-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 ={version= "0.5.3" }
axum = {version="0.8.9", features=["macros", "ws"]}
axum-extra = { version = "0.12.6", features = ["cookie"] }
bcrypt = "0.19.0"
dashmap = "6.1.0"
dotenv = "0.15.0"
futures-util = "0.3.32"
jsonwebtoken ={version= "10.3.0", features=["rust_crypto"]}
password-hash = {version="0.5",features= ["std"] }
rand = "0.10.1"
rand_core = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version="1.52.1", features = ["full"] }
tower-http ={version= "0.6.8",features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber ={version= "0.3.23" ,features=["env-filter", "fmt"] }
uuid = { version="1.23.1", features = ["serde", "v4"] }

[dev-dependencies]
rstest = "0.26.1"
